--- a/app/views/cuisines/edit.html.erb
+++ b/app/views/cuisines/edit.html.erb
@@ -24,7 +24,7 @@
           Tag
         </label>
 
-        <input type="text" id="tag_id" name="tag_id" placeholder="Tag" class="form-control" value="<%= @cuisine.tag_id %>">
+        <%= select_tag(:tag_id, options_from_collection_for_select(Tag.all, :id, :name, @cuisine.tag_id), :class => "form-control") %>
       </div>
 
       <!-- Label and input for businesses_id -->
