--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -23,3 +23,65 @@
     </div>
   </div>
 </div>
+
+<!-- A Tag has many cuisines -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Cuisines
+      </li>
+
+      <% @tag.cuisines.each do |cuisine| %>
+        <li class="list-group-item">
+          <a href="/cuisines/<%= cuisine.id %>">
+            <%= cuisine.tag_id %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/cuisines/<%= cuisine.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/cuisines/<%= cuisine.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_cuisine/<%= cuisine.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+
+<!-- A Tag has many businesses -->
+
+<div class="row">
+  <div class="col-md-12">
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-info">
+        Businesses
+      </li>
+
+      <% @tag.businesses.each do |business| %>
+        <li class="list-group-item">
+          <a href="/businesses/<%= business.id %>">
+            <%= business.address %>
+          </a>
+          <div class="btn-group btn-group-xs pull-right">
+            <a href="/businesses/<%= business.id %>" class="btn btn-primary">
+              <i class="fa fa-search-plus"></i>
+            </a>
+            <a href="/businesses/<%= business.id %>/edit" class="btn btn-warning">
+              <i class="fa fa-edit"></i>
+            </a>
+            <a href="/delete_business/<%= business.id %>" class="btn btn-danger" rel="nofollow">
+              <i class="fa fa-trash-o"></i>
+            </a>
+          </div>
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
