--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -24,7 +24,7 @@
         <td><%= business.name %></td>
         <td><%= business.description %></td>
         <td><%= business.website %></td>
-        <td><%= business.cover_photo %></td>
+        <td><img src='<%= business.cover_photo %>' class='img-responsive'></td>
         <td><%= business.ownership.user_id %></td>
         <td>
           <a href="/businesses/<%= business.id %>" class="btn btn-primary">Show</a>
