--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -66,6 +66,35 @@
           </div>
         </li>
       <% end %>
+
+      <li class="list-group-item">
+        <form action="/create_cuisine" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for tag_id -->
+      <div class="form-group">
+        <label for="tag_id" class="control-label">
+          Tag
+        </label>
+
+        <%= select_tag(:tag_id, options_from_collection_for_select(Tag.all, :id, :name), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for businesses_id -->
+      <div class="form-group">
+        <label for="businesses_id" class="control-label">
+          Businesses
+        </label>
+
+        <%= select_tag(:businesses_id, options_from_collection_for_select(Business.all, :id, :address), :class => "form-control") %>
+      </div>
+
+      <button class="btn btn-block btn-success">
+        Create Cuisine
+      </button>
+    </form>
+      </li>
     </ul>
   </div>
 </div>
@@ -97,6 +126,62 @@
           </div>
         </li>
       <% end %>
+
+      <li class="list-group-item">
+        <form action="/create_review" method="post" enctype="multipart/form-data">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for comment -->
+      <div class="form-group">
+        <label for="comment" class="control-label">
+          Comment
+        </label>
+
+        <textarea id="comment" name="comment" placeholder="Comment" class="form-control" rows="3"></textarea>
+      </div>
+
+      <!-- Label and input for rating -->
+      <div class="form-group">
+        <label for="rating" class="control-label">
+          Rating
+        </label>
+
+        <input type="text" id="rating" name="rating" placeholder="Rating" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for businesses_id -->
+      <div class="form-group">
+        <label for="businesses_id" class="control-label">
+          Businesses
+        </label>
+
+        <%= select_tag(:businesses_id, options_from_collection_for_select(Business.all, :id, :address), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for user_id -->
+      <div class="form-group">
+        <label for="user_id" class="control-label">
+          User
+        </label>
+
+        <%= select_tag(:user_id, options_from_collection_for_select(User.all, :id, :name), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for photo -->
+      <div class="form-group">
+        <label for="photo" class="control-label">
+          Photo
+        </label>
+
+        <input type="file" id="photo" name="photo" class="form-control">
+      </div>
+
+      <button class="btn btn-block btn-success">
+        Create Review
+      </button>
+    </form>
+      </li>
     </ul>
   </div>
 </div>
