--- a/app/views/ownerships/show.html.erb
+++ b/app/views/ownerships/show.html.erb
@@ -54,6 +54,65 @@
           </div>
         </li>
       <% end %>
+
+      <li class="list-group-item">
+        <form action="/create_business" method="post" enctype="multipart/form-data">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for address -->
+      <div class="form-group">
+        <label for="address" class="control-label">
+          Address
+        </label>
+
+        <input type="text" id="address" name="address" placeholder="Address" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for name -->
+      <div class="form-group">
+        <label for="name" class="control-label">
+          Name
+        </label>
+
+        <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for description -->
+      <div class="form-group">
+        <label for="description" class="control-label">
+          Description
+        </label>
+
+        <textarea id="description" name="description" placeholder="Description" class="form-control" rows="3"></textarea>
+      </div>
+
+      <!-- Label and input for website -->
+      <div class="form-group">
+        <label for="website" class="control-label">
+          Website
+        </label>
+
+        <input type="text" id="website" name="website" placeholder="Website" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for cover_photo -->
+      <div class="form-group">
+        <label for="cover_photo" class="control-label">
+          Cover photo
+        </label>
+
+        <input type="text" id="cover_photo" name="cover_photo" placeholder="Cover photo" class="form-control" value="">
+      </div>
+
+      <!-- Label and input for ownership_id -->
+      <input type="hidden" name="ownership_id" value="<%= @ownership.id %>">
+
+      <button class="btn btn-block btn-success">
+        Create Business
+      </button>
+    </form>
+      </li>
     </ul>
   </div>
 </div>
