--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -51,6 +51,29 @@
           </div>
         </li>
       <% end %>
+
+      <li class="list-group-item">
+        <form action="/create_cuisine" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <!-- Label and input for tag_id -->
+      <input type="hidden" name="tag_id" value="<%= @tag.id %>">
+
+      <!-- Label and input for businesses_id -->
+      <div class="form-group">
+        <label for="businesses_id" class="control-label">
+          Businesses
+        </label>
+
+        <%= select_tag(:businesses_id, options_from_collection_for_select(Business.all, :id, :address), :class => "form-control") %>
+      </div>
+
+      <button class="btn btn-block btn-success">
+        Create Cuisine
+      </button>
+    </form>
+      </li>
     </ul>
   </div>
 </div>
