--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -6,7 +6,11 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>Address</dt>
-      <dd><%= @business.address %></dd>
+      <dd>
+        <div>
+          <div id="location_map" style="height: 480px;"></div>
+        </div>
+      </dd>
 
       <dt>Name</dt>
       <dd><%= @business.name %></dd>
@@ -216,3 +220,21 @@
     </ul>
   </div>
 </div>
+
+
+<script src="//maps.google.com/maps/api/js?v=3.24&key=AIzaSyCOTPWiuvyyo6sKoIBzKA4-1ol-vTOIOlM"></script>
+<script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
+<script>
+  handler = Gmaps.build('Google');
+  handler.buildMap({ provider: {}, internal: {id: 'location_map'}}, function(){
+    markers = handler.addMarkers([
+      {
+        "lat": <%= @business.address_latitude %>,
+        "lng": <%= @business.address_longitude %>,
+        "infowindow": "<h5><%= @business.created_at %></h5><small><%= @business.address_formatted_address %></small>"
+      }
+    ]);
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+  });
+</script>
