--- a/app/views/cuisines/show.html.erb
+++ b/app/views/cuisines/show.html.erb
@@ -6,10 +6,22 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>Tag</dt>
-      <dd><%= @cuisine.tag_id %></dd>
+      <dd>
+        <% if @cuisine.tag.present? %>
+          <a href="/tags/<%= @cuisine.tag_id %>">
+            <%= @cuisine.tag.name %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Businesses</dt>
-      <dd><%= @cuisine.businesses_id %></dd>
+      <dd>
+        <% if @cuisine.businesses.present? %>
+          <a href="/businesses/<%= @cuisine.businesses_id %>">
+            <%= @cuisine.businesses.address %>
+          </a>
+        <% end %>
+      </dd>
 
     </dl>
 
