--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,11 +41,11 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
+          <li><a href="/tags">Tags</a></li>
+          <li><a href="/tag_names">Tag Names</a></li>
           <li><a href="/ownerships">Ownerships</a></li>
           <li><a href="/reviews">Reviews</a></li>
           <li><a href="/users">Users</a></li>
-          <li><a href="/cuisines">Cuisines</a></li>
-          <li><a href="/tags">Tags</a></li>
           <li><a href="/businesses">Businesses</a></li>
           <li><a href="/rails/info">Sitemap</a></li>
         </ul>
