--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -86,7 +86,7 @@
       <tr>
         <th>Comment</th>
         <th>Rating</th>
-        <th>Businesses</th>
+        <th>Business</th>
         <th>User</th>
         <th>Photo</th>
         <th>Actions</th>
