--- a/app/views/tags/new.html.erb
+++ b/app/views/tags/new.html.erb
@@ -18,13 +18,22 @@
       <!-- Hidden input for authenticity token to protect from forgery -->
       <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
-      <!-- Label and input for name -->
+      <!-- Label and input for tag_name_id -->
       <div class="form-group">
-        <label for="name" class="control-label">
-          Name
+        <label for="tag_name_id" class="control-label">
+          Tag name
         </label>
 
-        <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @tag.name %>">
+        <%= select_tag(:tag_name_id, options_from_collection_for_select(TagName.all, :id, :name, @tag.tag_name_id), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for business_id -->
+      <div class="form-group">
+        <label for="business_id" class="control-label">
+          Business
+        </label>
+
+        <%= select_tag(:business_id, options_from_collection_for_select(Business.all, :id, :address, @tag.business_id), :class => "form-control") %>
       </div>
 
       <button class="btn btn-success">
