--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -69,13 +69,13 @@
     </div>
 
 <div class="form-group">
-      <%= f.label :tags_name_cont, "Tag name contains" %>
-      <%= f.text_field :tags_name_cont, :class => "form-control", :placeholder => "Tag name contains" %>
+      <%= f.label :user_name_cont, "User name contains" %>
+      <%= f.text_field :user_name_cont, :class => "form-control", :placeholder => "User name contains" %>
     </div>
 
 <div class="form-group">
-      <%= f.label :user_name_cont, "User name contains" %>
-      <%= f.text_field :user_name_cont, :class => "form-control", :placeholder => "User name contains" %>
+      <%= f.label :tag_names_name_cont, "TagName name contains" %>
+      <%= f.text_field :tag_names_name_cont, :class => "form-control", :placeholder => "TagName name contains" %>
     </div>
 
       <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
