--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -9,11 +9,6 @@
       <p class="lead">Narrow results:</p>
 
         <div class="form-group">
-    <%= f.label :name_cont, "Name contains" %>
-    <%= f.text_field :name_cont, :class => "form-control", :placeholder => "Name contains" %>
-  </div>
-
-<div class="form-group">
           <%= f.label :created_at, "Created at" %>
           <div class="row">
             <div class='col-md-6 mb-1'>
@@ -53,7 +48,10 @@
           });
       </script>
 
-        
+        <div class="form-group">
+      <%= f.label :tag_name_name_cont, "TagName name contains" %>
+      <%= f.text_field :tag_name_name_cont, :class => "form-control", :placeholder => "TagName name contains" %>
+    </div>
 
       <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
 
@@ -69,13 +67,27 @@
   <div class="col-md-12">
     <table class="table table-striped table-hover">
       <tr>
-        <th>Name</th>
+        <th>Tag name</th>
+        <th>Business</th>
         <th>Actions</th>
       </tr>
 
       <% @tags.each do |tag| %>
       <tr>
-        <td><%= tag.name %></td>
+        <td>
+          <% if tag.tag_name.present? %>
+            <a href="/tag_names/<%= tag.tag_name.id %>">
+              <%= tag.tag_name.name %>
+            </a>
+          <% end %>
+        </td>
+        <td>
+          <% if tag.business.present? %>
+            <a href="/businesses/<%= tag.business.id %>">
+              <%= tag.business.address %>
+            </a>
+          <% end %>
+        </td>
         <td>
           <a href="/tags/<%= tag.id %>" class="btn btn-primary">Show</a>
           <a href="/tags/<%= tag.id %>/edit" class="btn btn-warning">Edit</a>
